<resources>
    <string name="app_name">Drops</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Location">Location</string>
    <string name="logout">LOGOUT</string>
    <string name="full_name">Full name...</string>
    <string name="edit">Edit</string>
    <string name="SEARCH">SEARCH</string>
    <string name="login">LOGIN</string>
    <string name="dont_have_an_acount">Dont Have an acount?</string>
    <string name="password">Password:</string>
    <string name="e_mail_addres">E-mail Addres:</string>
    <string name="LogIn">login</string>
    <string name="signup">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="you_are_logged_in_successfully">you are logged in successfully</string>
    <string name="textview" />
    <string name="choose_date_and_time">Choose date and time</string>
    <string name="confirm">Confirm</string>
    <string name="BookDonationDate">BookDonationDate</string>
    <string name="BookDonationTime">BookDonationTime</string>
    <string name="see_hospital_location">See Hospital Location</string>
    <string name="Diagnosis">Diagnosis:</string>
    <string name="need">Need</string>
    <string name="left">Left</string>
    <string name="book_time">Book</string>
    <string name="blood_type">drop</string>
    <string name="patient_list">Patient List</string>
    <string name="choose_your_blood_group">Choose your blood group</string>
    <string name="search_for_city">Search For City....</string>
    <string name="pin">pin</string>
    <string name="hadshake">handshake</string>
    <string name="circle">circle</string>
    <string name="thankyou">thanks</string>
    <string name="x">x</string>
    <string name="handshake">handshake</string>
    <string name="FullName">Full Name...</string>
    <string name="phone">Phone...</string>
    <string name="Edit">edit</string>
    <string name="donations">Donations:</string>
    <string name="add">add</string>
    <string name="editbutton">Edit</string>
    <string name="age">age...</string>
    <string name="bloodtype">bloodtype</string>
    <string name="home">Home</string>
    <string name="hospitals">Hospitals</string>
    <string name="profile">Profile</string>
    <string name="blood">BloodType</string>
    <string name="age11">Age</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="fullname11">Full Name</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="startdonating">Donate</string>
    <string name="todo">TODO</string>
    <string name="login2">Log in</string>
    <string name="patientinfo">PatientInfo</string>
    <string name="Profile">Profile</string>
    <string name="point">.</string>
    <string name="edit2">start edit your profile....</string>
    <string name="logout12">logout</string>
    <string name="fullname2">Full Name</string>
    <string name="Booking_your_appointment">Booking your appointment</string>
    <string name="donations1">Donations</string>
    <string name="Editappointment">Edit your appointment</string>
    <string name="Update_your_appointment_Date"><![CDATA[Update your appointment Date & Time]]></string>
    <string name="appointment">appointment booked successfuly</string>
    <string name="apointment">Thank you for donating to save a life</string>

</resources>