<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.ProfileNewFragment" >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView10"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/blue22"
        android:backgroundTint="@color/blue22"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="259dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/FullName"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="252dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/phone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_name" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="105dp"
                android:layout_height="109dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/blooddrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/bloodtype_edittext"
                android:layout_width="104dp"
                android:layout_height="59dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="4dp"
                android:ems="10"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:hint="@string/bloodtype"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/phone_number"
                app:layout_constraintTop_toBottomOf="@+id/age_edittext"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/age_edittext"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/age"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.692"
                app:layout_constraintStart_toEndOf="@+id/user_name"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/edit_button"
                android:layout_width="202dp"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/lightblue"
                android:fontFamily="@font/poppins_light"
                android:text="@string/editbutton"
                android:textColor="@android:color/holo_red_dark"
                app:cornerRadius="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/bloodtype_edittext"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="TextContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/patient_list"
        android:textColor="@color/bluegray"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView10" />

</androidx.constraintlayout.widget.ConstraintLayout>
