<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileFragment" >

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/poppins_medium"
        android:paddingLeft="20dp"
        android:text="@string/fullname11"
        android:textColor="@color/neu"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView11"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:paddingLeft="20dp"
        android:text="@string/phonenumber"
        android:textColor="@color/neu"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView11" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView12"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23">

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:inputType="phone"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView24"
        android:layout_width="98dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_medium"
        android:paddingLeft="20dp"
        android:text="@string/age11"
        android:textColor="@color/neu"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView12" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView13"
        android:layout_width="170dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:paddingLeft="20dp"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24">

        <EditText
            android:id="@+id/age_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:inputType="number"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView25"
        android:layout_width="131dp"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_medium"
        android:paddingLeft="20dp"
        android:text="@string/blood"
        android:textColor="@color/neu"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.674"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/cardView12" />

    <androidx.cardview.widget.CardView
        android:layout_width="170dp"
        android:layout_height="110dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cardView13"
        app:layout_constraintTop_toBottomOf="@+id/textView25">

        <EditText
            android:id="@+id/blood_type_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:inputType="number"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/city"
        android:textColor="@color/neu"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView13" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView14"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="15dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26">

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:fontFamily="@font/poppins_light"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.8"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/save"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView14"
        app:layout_constraintVertical_bias="0.225" />
</androidx.constraintlayout.widget.ConstraintLayout>