<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="@color/neu"
    android:backgroundTint="@color/light"
    android:orientation="vertical"
    app:cardUseCompatPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="173dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/groups" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/Update_your_appointment_Date"
            android:textColor="@color/red"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/cardView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.358"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView7"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="28dp"
            android:backgroundTint="@color/bluegray"
            android:foregroundGravity="center"
            app:cardCornerRadius="15dp"
            app:cardUseCompatPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.567"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView8">

            <ImageButton
                android:id="@+id/time_image_button2"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/bluegray"
                android:contentDescription="@string/BookDonationTime"
                android:foregroundGravity="center"
                android:src="@drawable/ic_baseline_access_time_filled_24"
                tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/booking_donation_time2"
                android:layout_width="245dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView8"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/bluegray"
            android:foregroundGravity="center"
            app:cardCornerRadius="15dp"
            app:cardUseCompatPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.588"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView30">

            <ImageButton
                android:id="@+id/calender_imagebutton2"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:alpha="0.9"
                android:backgroundTint="@color/bluegray"
                android:contentDescription="@string/BookDonationDate"
                android:foregroundGravity="center"
                android:src="@drawable/ic_baseline_calendar_month_24"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,ImageContrastCheck,ImageContrastCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/booking_donation_date2"
                android:layout_width="245dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:fontFamily="@font/poppins_light"
                android:foregroundGravity="center"
                android:gravity="center"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/confirm_button3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/red"
            android:text="@string/confirm"
            android:textColor="@color/white"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView7" />

    </LinearLayout>

</androidx.cardview.widget.CardView>